feat: added docker

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,5 +9,37 @@ services:
       - "5432:5432"
     volumes:
       - notes_db_data:/var/lib/postgresql/data
+    networks:
+      - notes_net
+  
+  notes_backend:
+    depends_on:
+      - notes_db
+    build:
+      context: ./backend
+    ports:
+      - 8080:8080
+    environment:
+      - DB_USER=user
+      - DB_PASSWORD=user123
+      - DB_HOST=notes_db
+      - DB_PORT=5432
+      - DB_NAME=notes_db
+    networks:
+      - notes_net
+  
+  notes_frontend:
+    depends_on:
+      - notes_backend
+    build:
+      context: ./frontend
+    ports:
+      - 3000:3000
+    networks:
+      - notes_net
+
+networks:
+ notes_net:
+
 volumes:
   notes_db_data:
